--- a/mcp_servers/vercel/Dockerfile
+++ b/mcp_servers/vercel/Dockerfile
@@ -1,15 +1,31 @@
-FROM node:18-alpine
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
+# Install all dependencies
+RUN npm ci
+
+# Copy the rest of the application code
+COPY . .
+
+# Build the application
+RUN npm run build
+
+
+FROM node:18-alpine AS production
+
+WORKDIR /app
+
+# Copy only the necessary files from the builder stage
+COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/dist ./dist
+
+# Install only production dependencies
 RUN npm ci --only=production
 
-# Copy built application
-COPY dist/ ./dist/
 
 # Expose port
 EXPOSE 3000
