--- a/mcp_servers/vercel/.env.example
+++ b/mcp_servers/vercel/.env.example
@@ -1,3 +1,7 @@
+# Example environment variables for Vercel MCP Server
+PORT=5000
+NODE_ENV=production
+
 # Required - Get from https://vercel.com/account/tokens
 VERCEL_API_TOKEN=your_vercel_api_token_here
 
