feat: update Google Photos integration with new OAuth token generation and Picker API scopes

--- a/mcp_servers/google_photos/.env.example
+++ b/mcp_servers/google_photos/.env.example
@@ -2,6 +2,7 @@
 GOOGLE_PHOTOS_MCP_SERVER_PORT=5000
 
 # Google OAuth 2.0 configuration
+GOOGLE_ACCESS_TOKEN=your-google-access-token
 GOOGLE_TOKEN_URI=https://oauth2.googleapis.com/token
 GOOGLE_REFRESH_TOKEN=your-google-refresh-token
 GOOGLE_CLIENT_ID=your-google-client-id
